--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@supabase/supabase-js": "^2.96.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
     "lenis": "^1.3.17",
